--- a/index.html
+++ b/index.html
@@ -354,6 +354,11 @@
             align-items: flex-start;
             justify-content: center;
         }
+
+        .mereclassforcolor {
+            color: #00b894;
+        }
+
         .contact-info {
             flex: 1;
             min-width: 230px;
@@ -471,7 +476,7 @@
     <!-- Navigation -->
     <nav id="navbar">
         <div class="nav-container">
-            <div class="logo">SS</div>
+            <div class="logo">LR</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -488,7 +493,7 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Sarim Sheikh</h1>
+                <h1>Link Rise</h1>
                 <p class="hero-subtitle">Expert SEO Specialist & Digital Marketing Professional</p>
                 <a href="#contact" class="cta-button">Let's Work Together</a>
             </div>
@@ -530,26 +535,118 @@
             <h2 class="scroll-animate">My Services</h2>
             <div class="services-grid">
                 <div class="service-card scroll-animate">
-                    <div class="service-icon"><i class="fas fa-search"></i></div>
-                    <h3>On-Page SEO</h3>
-                    <p>Complete on-page optimization including keyword research, meta tags, content optimization, internal linking, and technical SEO improvements for better search rankings.</p>
+                    <!-- <div class="service-icon"><i class="fas fa-search"></i></div> -->
+                    <h3>
+STARTER PLAN  <br>
+
+span: $100💵 <br>
+
+Delivered time  05  Days 
+</h3>
+                    <p>
+
+      
+<span class="mereclassforcolor"><b>1ST TIER</b></span> <br>
+<!-- <span class="mereclassforcolor" >  </span> -->
+<span class="mereclassforcolor" >✓  </span> 10 WEB 2.0 <br>
+<span class="mereclassforcolor" >✓  </span> 25 PROFILE BACKLINKS <br>
+<span class="mereclassforcolor" > X </span>
+<span class="mereclassforcolor" > X </span>
+<span class="mereclassforcolor" >X  </span>
+<span class="mereclassforcolor" >✓  </span> 10 PRIVATE BLOG NETWORK PBN POSTS <br>
+<span class="mereclassforcolor" >✓  </span> 20 FORUM COMMENTS <br>
+<span class="mereclassforcolor" >✓  </span> 15 NICHE RELEVANT COMMENTS <br>
+<span class="mereclassforcolor" > ✓ </span> 50 DO-FOLLOW BLOG COMMENTS <br>
+<span class="mereclassforcolor" > X </span> <br>
+<span class="mereclassforcolor" > ✓ </span>15 SOCIAL SIGNALS <br>
+<span class="mereclassforcolor" > ✓ </span>05 .EDU & GOV <br>
+<span class="mereclassforcolor" > ✓ </span>05 CLASSIFIED ADS SUBMISSION <br>
+<span class="mereclassforcolor" > ✓ </span>05 INFOGRAPHICS SUBMISSION <br>
+<span class="mereclassforcolor" > ✓ </span>02 video submission <br>
+<span class="mereclassforcolor" > <b>2ND TIER</b> </span> <br>
+<span class="mereclassforcolor" > ✓ </span> 100 blog comments on web 2.0 <br>
+<span class="mereclassforcolor" > ✓ </span> 30 social bookmarks on PBN POSTS <br>
+<span class="mereclassforcolor" > X </span> <br>
+<span class="mereclassforcolor" > X </span> <br>
+                    </p>
                 </div>
                 <div class="service-card scroll-animate">
-                    <div class="service-icon"><i class="fas fa-link"></i></div>
-                    <h3>Off-Page SEO</h3>
-                    <p>Strategic link building, guest posting, local citations, social signals, and brand mentions to boost your website's authority and domain strength.</p>
+                    <!-- <div class="service-icon"><i class="fas fa-link"></i></div> -->
+                    <h3>
+STANDARD PLAN <br>
+
+Price : $180💵 <br>
+
+Delivered time 10 Days
+</h3>
+                    <p>
+
+<span class="mereclassforcolor"><b>1ST TIER</b></span> <br>
+<span class="mereclassforcolor"><b>✓</b></span>  15 WEB 2.0  <br>
+<span class="mereclassforcolor"><b>✓</b></span>  45 PROFILE, BACKLINKS <br>
+<span class="mereclassforcolor"><b>✓</b></span>  03 PRESS RELEASE SUBMISSION <br>
+<span class="mereclassforcolor"><b>✓</b></span>  05 GUEST POSTS SUBMISSION <br>
+<span class="mereclassforcolor"><b>✓</b></span>  15 ARTICLE SUBMISSION <br>
+<span class="mereclassforcolor"><b>✓</b></span>  20 PRIVATE BLOG NETWORK PBN POSTS <br>
+<span class="mereclassforcolor"><b>✓</b></span>  50 FORUM COMMENTS <br>
+<span class="mereclassforcolor"><b>✓</b></span>  35 NICHE RELEVANT COMMENTS <br>
+<span class="mereclassforcolor"><b>✓</b></span>  100 DO-FOLLOW BLOG COMMENTS <br>
+<span class="mereclassforcolor"><b>✓</b></span>  02 FORUMS PROFILE LINK <br>
+<span class="mereclassforcolor"><b>✓</b></span>  30 SOCIAL SIGNALS <br>
+<span class="mereclassforcolor"><b>✓</b></span>  15 .EDU & GOV <br>
+<span class="mereclassforcolor"><b>✓</b></span>  15 CLASSIFIED ADS SUBMISSION <br>
+<span class="mereclassforcolor"><b>✓</b></span>  10 INFOGRAPHICS SUBMISSION <br>
+<span class="mereclassforcolor"><b>✓</b></span>  05 video submission <br>
+<span class="mereclassforcolor"><b>2ND TIER</b></span> <br>
+<span class="mereclassforcolor"><b>✓</b></span> 150 blog comments on web 2.0 <br>
+<span class="mereclassforcolor"><b>✓</b></span> 30 social bookmarks on guest post <br>
+<span class="mereclassforcolor"><b>✓</b></span> 40 blog comments on pbn <br>
+<span class="mereclassforcolor"><b>✓</b></span> 25 blog comments on press release <br>
+                    </p>
                 </div>
                 <div class="service-card scroll-animate">
-                    <div class="service-icon"><i class="fas fa-chart-line"></i></div>
-                    <h3>SEO Analysis</h3>
-                    <p>Comprehensive website audits, competitor analysis, keyword research, and performance tracking to identify opportunities and optimize strategies.</p>
+                    <!-- <div class="service-icon"><i class="fas fa-chart-line"></i></div> -->
+                    <h3>
+DIAMOND PLAN  <br>
+
+Price : $250💵 <br>
+
+Delivered time 15 Days 
+</h3>
+                    <p>
+
+
+<span><b>1ST TIER</b></span> <br>
+<span class="mereclassforcolor" ><b>✓</b></span> 25 WEB 2.0 <br>
+<span class="mereclassforcolor" ><b>✓</b></span> 60 PROFILE, BACKLINKS <br>
+<span class="mereclassforcolor" ><b>✓</b></span> 05 PRESS RELEASE SUBMISSION <br>
+<span class="mereclassforcolor" ><b>✓</b></span> 05 GUEST POSTS SUBMISSION <br>
+<span class="mereclassforcolor" ><b>✓</b></span> 30 ARTICLE SUBMISSION <br>
+<span class="mereclassforcolor" ><b>✓</b></span> 40 PRIVATE BLOG NETWORK PBN POSTS <br>
+<span class="mereclassforcolor" ><b>✓</b></span> 80 FORUM COMMENTS <br>
+<span class="mereclassforcolor" ><b>✓</b></span> 60 NICHE RELEVANT COMMENTS <br>
+<span class="mereclassforcolor" ><b>✓</b></span> 150 DO-FOLLOW BLOG COMMENTS <br>
+<span class="mereclassforcolor" ><b>✓</b></span> 05 FORUMS PROFILE LINK <br>
+<span class="mereclassforcolor" ><b>✓</b></span> 50 SOCIAL SIGNALS <br>
+<span class="mereclassforcolor" ><b>✓</b></span> 20 .EDU & GOV <br>
+<span class="mereclassforcolor" ><b>✓</b></span> 20 CLASSIFIED ADS SUBMISSION <br>
+<span class="mereclassforcolor" ><b>✓</b></span> 10 INFOGRAPHICS SUBMISSION <br>
+<span class="mereclassforcolor" ><b>✓</b></span> 05 video submission <br>
+<span class="mereclassforcolor" ><b>2ND TIER</b></span> <br>
+<span class="mereclassforcolor" ><b>✓</b></span> 150 blog comments on web 2.0 <br>
+<span class="mereclassforcolor" ><b>✓</b></span> 30 social bookmarks on guest post <br>
+<span class="mereclassforcolor" ><b>✓</b></span> 40 blog comments on pbn <br>
+<span class="mereclassforcolor" ><b>✓</b></span> 25 blog comments on press release <br>
+
+
+                    </p>
                 </div>
-                <div class="service-card scroll-animate">
+                <!-- <div class="service-card scroll-animate">
                     <div class="service-icon"><i class="fas fa-mobile-alt"></i></div>
                     <h3>Local SEO</h3>
                     <p>Local business optimization, Google My Business setup, local citations, and location-based keyword targeting for improved local visibility.</p>
-                </div>
-                <div class="service-card scroll-animate">
+                </div> -->
+                <!-- <div class="service-card scroll-animate">
                     <div class="service-icon"><i class="fas fa-edit"></i></div>
                     <h3>Content Strategy</h3>
                     <p>SEO-optimized content creation, blog writing, content planning, and content gap analysis to engage your audience and improve rankings.</p>
@@ -558,7 +655,7 @@
                     <div class="service-icon"><i class="fas fa-tools"></i></div>
                     <h3>Technical SEO</h3>
                     <p>Website speed optimization, mobile responsiveness, schema markup, XML sitemaps, and technical fixes for better search engine crawling.</p>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -722,7 +819,7 @@
                         <i class="fas fa-user contact-icon"></i>
                         <div class="contact-text">
                             <h4>Name</h4>
-                            <p>Sarim Sheikh</p>
+                            <p>Link Rise</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -740,10 +837,12 @@
                         </div>
                     </div>
                     <div class="contact-item">
-                        <i class="fab fa-whatsapp contact-icon"></i>
+                        <!-- <i class="fab fa-whatsapp contact-icon"></i> -->
+                        <i class="fas fa-briefcase contact-icon"></i>
+
                         <div class="contact-text">
-                            <h4>WhatsApp</h4>
-                            <p><a href="https://wa.me/8801535724266">+92 315-3334113</a></p>
+                            <h4>Fiverr.</h4>
+                            <p><a href="https://www.fiverr.com/link_rise?public_mode=true">LinkRise</a></p>
                         </div>
                     </div>
                 </div>
@@ -774,7 +873,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2025 Sarim Sheikh. All rights reserved. | SEO Expert & Digital Marketing Professional</p>
+            <p>&copy; 2025 LinkRise. All rights reserved. | SEO Expert & Digital Marketing Professional</p>
         </div>
     </footer>
     <script>
