--- a/index.html
+++ b/index.html
@@ -534,12 +534,14 @@
         <div class="container">
             <h2 class="scroll-animate">My Services</h2>
             <div class="services-grid">
+           
                 <div class="service-card scroll-animate">
+                       <a href="#contact" style="text-decoration: none;">
                     <!-- <div class="service-icon"><i class="fas fa-search"></i></div> -->
                     <h3>
 STARTER PLAN  <br>
 
-span: $100💵 <br>
+Price : $119💵 <br>
 
 Delivered time  05  Days 
 </h3>
@@ -569,13 +571,15 @@ Delivered time  05  Days
 <span class="mereclassforcolor" > X </span> <br>
 <span class="mereclassforcolor" > X </span> <br>
                     </p>
+                    </a>
                 </div>
                 <div class="service-card scroll-animate">
+                         <a href="#contact" style="text-decoration: none;">
                     <!-- <div class="service-icon"><i class="fas fa-link"></i></div> -->
                     <h3>
 STANDARD PLAN <br>
 
-Price : $180💵 <br>
+Price : $199💵 <br>
 
 Delivered time 10 Days
 </h3>
@@ -603,13 +607,14 @@ Delivered time 10 Days
 <span class="mereclassforcolor"><b>✓</b></span> 40 blog comments on pbn <br>
 <span class="mereclassforcolor"><b>✓</b></span> 25 blog comments on press release <br>
                     </p>
+                    </a>
                 </div>
                 <div class="service-card scroll-animate">
-                    <!-- <div class="service-icon"><i class="fas fa-chart-line"></i></div> -->
+                       <a href="#contact" style="text-decoration: none;">                    <!-- <div class="service-icon"><i class="fas fa-chart-line"></i></div> -->
                     <h3>
 DIAMOND PLAN  <br>
 
-Price : $250💵 <br>
+Price : $279💵 <br>
 
 Delivered time 15 Days 
 </h3>
@@ -640,6 +645,8 @@ Delivered time 15 Days
 
 
                     </p>
+                    </a>
+
                 </div>
                 <!-- <div class="service-card scroll-animate">
                     <div class="service-icon"><i class="fas fa-mobile-alt"></i></div>
@@ -934,9 +941,9 @@ Delivered time 15 Days
             const email = formData.get('email');
             const project = formData.get('project');
             const message = formData.get('message');
-            const whatsappMessage = `Hello Purnota Sheikh!\n\nName: ${name}\nEmail: ${email}\nProject Type: ${project}\n\nMessage: ${message}\n\nI'm interested in your SEO services. Please get back to me at your earliest convenience.`;
+            const whatsappMessage = `Hello LinkRise!\n\nName: ${name}\nEmail: ${email}\nProject Type: ${project}\n\nMessage: ${message}\n\nI'm interested in your SEO services. Please get back to me at your earliest convenience.`;
             const encodedMessage = encodeURIComponent(whatsappMessage);
-            const whatsappURL = `https://wa.me/8801535724266?text=${encodedMessage}`;
+            const whatsappURL = `https://wa.me/923153334113?text=${encodedMessage}`;
             window.open(whatsappURL, '_blank');
             // Show sent style
             const submitBtn = this.querySelector('.submit-btn');
